--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -954,7 +954,7 @@ p:last-child {
 
     z-index: 999999;
 
-    background-color: #ffffff;
+    background: #fff;
 
     width: 100%;
 
@@ -962,9 +962,9 @@ p:last-child {
 
     text-align: center;
 
-    left: 0;
+    top: 0;
 
-    right: 0;
+    left: 0;
 
 }
 
@@ -1923,7 +1923,12 @@ p:last-child {
 
 @media only screen and (max-width: 991px) {
 
-
+.roi-results.is-sticky {
+	position: relative !important;
+	width: auto !important;
+	padding-bottom: 0 !important;
+	left: 0 !important;
+}
 
 	.navbar-area.is-sticky {
 
@@ -7497,9 +7502,13 @@ blockquote::after, .blockquote::after {
 
 .copyright-area {
 
+	position: relative;
+
 	background-color: #333;
 
 	padding: 35px 0;
+
+	z-index: 1;
 
 }
 
@@ -7871,4 +7880,19 @@ blockquote::after, .blockquote::after {
 
 .new-btn {
 	margin-top: 20px;
+}
+
+.roi-results.is-sticky {
+	position: fixed;
+	bottom: 0;
+	left: 50%;
+	background: #fff;
+	width: 570px;
+	height: auto;
+	padding-bottom: 40px;
+	background: #eee;
+}
+
+.label-primary {
+	color: #303171;
 }
